--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                 </nav>
             </div>
         </div>
+        <div class="pib">
+            Назарук Дмитро Сергійоич
+        </div>
     </footer>
     <script src="script.js"></script>
 </body>
